[package]
name = "verifiable_random_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2curves = { version = "0.1.0", features = ["derive_serde"] }
sha2 = "0.10"
rand_core = "0.6"
subtle = "2.5.0"

[dev-dependencies]
ark-std = "0.4.0"